--- a/Table.html
+++ b/Table.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Project</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Table Work</title>
 </head>
 <body>
-    <h3>Working on it</h3>
-    <h3>I think it's working</h3>
+    <table>
+        <tr>
+            <td>1</td>
+            <td>Safuqul Islam Bahar</td>
+            <td>26</td>
+            <td>13000</td>
+        </tr>
+        
+    </table>
 </body>
 </html>
