--- a/Table.html
+++ b/Table.html
@@ -5,16 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table Work</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <table>
-        <tr>
-            <td>1</td>
-            <td>Safuqul Islam Bahar</td>
-            <td>26</td>
-            <td>13000</td>
-        </tr>
-        
+        <thead>
+            <tr>
+                <th>No.</th>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Working type</th>
+                <th>Monthly income</th>
+                <th>Monthly cost</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Safuqul Islam Bahar</td>
+                <td>26</td>
+                <td>Job</td>
+                <td>17000</td>
+                <td>13000</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Md Ibrahim Hossain Sumon</td>
+                <td>22</td>
+                <td>Jobless</td>
+                <td>11000</td>
+                <td>10000</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Tanvir Bhuiyan</td>
+                <td>22</td>
+                <td>Jobless</td>
+                <td>0</td>
+                <td>5000</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
