--- a/From.html
+++ b/From.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="Table.html">Table</a>
+            <a href="From.html">from</a>
+        </nav>
+    </header>
     <h3>Demo from fill up</h3>
     <Form>
         <label for="Name">Your Name
