--- a/Table.html
+++ b/Table.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="From.html">from</a>
+        </nav>
+    </header>
     <table>
         <thead>
             <tr>
